--- a/style.css
+++ b/style.css
@@ -44,3 +44,27 @@ h2 {
     margin-bottom: 20px;
     margin-top: auto;
 } 
+
+.dropbutton {
+    background-color: green;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}
+
+.dropbutton:hover, .dropbutton:focus{
+    background-color: darkgreen;
+}
+
+.dropdown-content{
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.804);
+    z-index: 1;
+}
+
+.show{display: block;}
